<resources>
    <string name="MEASUREMENT_FAHRENHEIT">℉</string>
    <string name="MEASUREMENT_CELSIUS">℃</string>
    <string name="app_name">MeteoApp</string>
    <string name="localityChoice">Current location</string>
    <string name="temperature"> T </string>
    <string name="oneDay">1 Day</string>
    <string name="threeDays">3 Days</string>
    <string name="week">Week</string>
    <string name="hintLocation">Enter location</string>
    <string name="nightModeSwitch">Night Mode</string>
    <string name="cBoxPressure">Atmosphere pressure</string>
    <string name="cBoxWindSpeed">Wind Speed</string>
    <string name="settingsBtnDescription">Settings</string>
    <string name="infoLink"><a>Additional Information</a></string>
    <string name="link">https://en.wikipedia.org/wiki/</string>
    <string name="oneDay_blank_fragment">oneDay_blank_fragment</string>
    <string name="threeDay_blank_fragment">threeDay_blank_fragment</string>
    <string name="week_blank_fragment">week_blank_fragment</string>
    <string name="date">Date</string>
    <string name="conditions">Conditions</string>
    <string name="dayHigh">Day High</string>
    <string name="dataDayHigh">28</string>
    <string name="dayLow">Day Low</string>
    <string name="dataDayLow">19</string>
    <string name="humidity">Humidity %</string>
    <string name="dataHumidity">45</string>
    <string name="windSpeedSnackON">Show wind speed</string>
    <string name="pressureSnackON">Show pressure</string>
    <string name="windSpeedSnackOFF">Wind speed display off</string>
    <string name="pressureSnackOFF">Pressure display off</string>
</resources>
