<?xml version="1.0" encoding="utf-8"?>
<androidx.appcompat.widget.LinearLayoutCompat xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    style="@style/AppTheme"
    tools:context=".MainActivity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="100dp"
        android:layout_weight="0"
        android:orientation="horizontal"
        android:background="@color/backGr">

        <TextView
            android:id="@+id/localityChoice"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="5"
            android:hint="@string/localityChoice"
            android:textColorHint="@color/textColor"
            android:textSize="@dimen/locality"
            android:textColor="@color/textColor"/>

        <TextView
            android:id="@+id/temperature"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:layout_weight="0"
            android:text="@string/temperature"
            android:textSize="@dimen/temperature"
            android:textColor="@color/textColor"/>

        <TextView
            android:id="@+id/measure"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:textSize="@dimen/measure"
            android:textColor="@color/textColor"/>

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_weight="0"
        android:orientation="vertical"
        android:padding="5dp"
        android:background="@color/backGr">

        <TextView
            android:id="@+id/infoLink"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:text="@string/infoLink"
            android:textColor="@color/textColor"/>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="horizontal"
            android:background="@color/backGr">

            <TextView
                android:id="@+id/itemDate"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:gravity="center_horizontal"
                android:text="@string/date"
                android:textColor="@color/textColor"/>

            <TextView
                android:id="@+id/itemConditions"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:text="@string/conditions"
                android:textColor="@color/textColor"/>

            <TextView
                android:id="@+id/dayHigh"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="@string/dayHigh"
                android:textColor="@color/textColor"/>

            <TextView
                android:id="@+id/dayLow"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="@string/dayLow"
                android:textColor="@color/textColor"/>

            <TextView
                android:id="@+id/humidity"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="@string/humidity"
                android:textColor="@color/textColor"/>
        </LinearLayout>


    </LinearLayout>


    <FrameLayout
        android:id="@+id/mainFragmentView"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_weight="1"
        android:background="@color/backGr">
    </FrameLayout>

    <com.google.android.material.circularreveal.CircularRevealLinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_weight="0"
        android:orientation="horizontal"
        android:background="@color/backGr">

        <com.google.android.material.button.MaterialButton
            android:id="@+id/oneDayBtn"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="2"
            android:layout_marginStart="8dp"
            android:text="@string/oneDay"
            app:cornerRadius="20dp"/>

        <com.google.android.material.button.MaterialButton
            android:id="@+id/threeDaysBtn"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="2"
            android:layout_marginStart="8dp"
            android:text="@string/threeDays"
            app:cornerRadius="20dp"/>

        <com.google.android.material.button.MaterialButton
            android:id="@+id/weekBtn"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="2"
            android:layout_marginStart="8dp"
            android:text="@string/week"
            app:cornerRadius="20dp"/>

        <androidx.appcompat.widget.AppCompatImageButton
            android:id="@+id/settingsBtn"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:layout_marginStart="8dp"
            android:contentDescription="@string/settingsBtnDescription"
            android:background="@color/backGr"
            android:src="@drawable/ic_settings_black_24dp" />

    </com.google.android.material.circularreveal.CircularRevealLinearLayout>

</androidx.appcompat.widget.LinearLayoutCompat>